infra/k8s/campaign-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaign-deployment
  namespace: deps-lead-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campaign-svc
  template:
    metadata:
      labels:
        app: campaign-svc
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: campaign-svc
        image: harbor.javajon-gke.duckdns.org/library/campaign-svc:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
