infra/k8s/frontend-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: deps-lead-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: outreach-ui
  template:
    metadata:
      labels:
        app: outreach-ui
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: outreach-ui
        image: harbor.javajon-gke.duckdns.org/deps/outreach-ui:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
