infra/k8s/lead-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lead-deployment
  namespace: deps-lead-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: LeadsApp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: LeadsApp
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: lead-svc
        image: harbor.javajon-gke.duckdns.org/library/lead-svc:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
