infra/k8s/auth-svc-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: deps-lead-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-svc
  template:
    metadata:
      labels:
        app: auth-svc
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: auth-svc
        image: harbor.javajon-gke.duckdns.org/library/auth-svc:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: deps-lead-svc
spec:
  selector:
    app: auth-svc
  ports:
  - name: http
    protocol: TCP
    port: 8083
    targetPort: 8083
  type: NodePort
