infra/k8s/campaign-svc-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaign-deployment
  namespace: deps-lead-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campaign-svc
  template:
    metadata:
      labels:
        app: campaign-svc
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: campaign-svc
        image: harbor.javajon-gke.duckdns.org/library/campaign-svc:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: campaign-svc
  namespace: deps-lead-svc
spec:
  selector:
    app: campaign-svc
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
