infra/k8s/campaign-svc-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: campaign-svc
  namespace: deps-lead-svc
spec:
  selector:
    app: campaign-svc
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
