infra/k8s/frontend-svc-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: deps-lead-svc
spec:
  type: NodePort
  selector:
    app: outreach-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
