infra/k8s/lead-svc-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: lead-svc
  namespace: deps-lead-svc
spec:
  selector:
    app.kubernetes.io/name: LeadsApp
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
